/*
 * Copyright 2016-present the IoT DC3 original author or authors.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package api.common;

import "api/common/base.proto";

/*
Config
*/
option java_package = "io.github.pnoker.api.common";
option java_outer_classname = "EntityProto";
option objc_class_prefix = "Common";
option java_multiple_files = true;

/*
Driver
*/
message GrpcDriverDTO {
  /*
  Base
  */
  GrpcBase base = 1;

  /*驱动名称*/
  string driver_name = 2;
  string driver_code = 3; // 驱动编号
  string service_name = 4; // 驱动服务名称
  string service_host = 5; // 服务主机
  int32 driver_type_flag = 6; // 驱动类型标识
  string driver_ext = 7; // 驱动拓展信息
  int32 enable_flag = 8; // 使能标识
  string signature = 9; // 签名
  int32 version = 10; // 版本

  /*
  租户ID
  */
  int64 tenant_id = 11;
}

/*
Device
*/
message GrpcDeviceDTO {
  /*
  Base
  */
  GrpcBase base = 1;

  string device_name = 2; // 位号名称
  string device_code = 3; // 位号编号
  int64 driver_id = 4; // 驱动ID
  string device_ext = 5; // 设备拓展信息
  int32 enable_flag = 6; // 使能标识
  string signature = 7; // 签名
  int32 version = 8; // 版本

  /*
  附加字段
  */
  repeated int64 profile_ids = 9; // 模版ID集

  /*
  租户ID
  */
  int64 tenant_id = 10;
}

/*
Point
*/
message GrpcPointDTO {
  /*
  Base
  */
  GrpcBase base = 1;

  string point_name = 2; // 位号名称
  string point_code = 3; // 位号编号
  int32 point_type_flag = 4; // 位号类型标识
  int32 rw_flag = 5; // 读写标识
  double base_value = 6; // 基础值
  double multiple = 7; // 比例系数
  int32 value_decimal = 8; // 数据精度
  string unit = 9; // 单位
  int64 profile_id = 10; // 模板ID
  string point_ext = 11; // 位号拓展信息
  int32 enable_flag = 12; // 使能标识
  string signature = 13; // 签名
  int32 version = 14; // 版本

  /*
  租户ID
  */
  int64 tenant_id = 15;
}

/*
Driver Attribute
*/
message GrpcDriverAttributeDTO {
  /*
  Base
  */
  GrpcBase base = 1;

  string attribute_name = 2; // 属性名称
  string attribute_code = 3; // 属性编号
  int32 attribute_type_flag = 4; // 属性类型标识
  string default_value = 5; // 默认值
  int64 driver_id = 6; // 驱动ID
  string attribute_ext = 7; // 驱动属性拓展信息
  int32 enable_flag = 8; // 使能标识
  string signature = 9; // 签名
  int32 version = 10; // 版本

  /*
  租户ID
  */
  int64 tenant_id = 11;
}

/*
驱动属性配置
*/
message GrpcDriverAttributeConfigDTO {
  /*
  Base
  */
  GrpcBase base = 1;

  int64 attribute_id = 2; // 驱动属性ID
  string config_value = 3; // 驱动配置值
  int64 device_id = 4; // 设备ID
  int32 enable_flag = 5; // 使能标识
  string signature = 6; // 签名
  int32 version = 7; // 版本

  /*
  租户ID
  */
  int64 tenant_id = 8;
}

/*
Point Attribute
*/
message GrpcPointAttributeDTO {
  /*
  Base
  */
  GrpcBase base = 1;

  string attribute_name = 2; // 属性名称
  string attribute_code = 3; // 属性编号
  int32 attribute_type_flag = 4; // 属性类型标识
  string default_value = 5; // 默认值
  int64 driver_id = 6; // 驱动ID
  string attribute_ext = 7; // 驱动属性拓展信息
  int32 enable_flag = 8; // 使能标识
  string signature = 9; // 签名
  int32 version = 10; // 版本

  /*
  租户ID
  */
  int64 tenant_id = 11;
}

/*
位号属性配置
*/
message GrpcPointAttributeConfigDTO {
  /*
  Base
  */
  GrpcBase base = 1;

  int64 attribute_id = 2; // 位号属性ID
  string config_value = 3; // 位号配置值
  int64 device_id = 4; // 设备ID
  int64 point_id = 5; // 位号ID
  int32 enable_flag = 6; // 使能标识
  string signature = 7; // 签名
  int32 version = 8; // 版本

  /*
  租户ID
  */
  int64 tenant_id = 9;
}



